--- a/_columns/Stock_Of_the_Day/2024-10-02.md
+++ b/_columns/Stock_Of_the_Day/2024-10-02.md
@@ -89,7 +89,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 [IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Market Ekes Out Gain As Tesla, Nvidia Bounce Off Key Support](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-nvidia-rise-off-support/)
+[Futures: Nvidia CEO Sees 'Insane' Demand](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-economic-data-nvidia-ceo-insane-demand/)
 
 
 
