--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-02.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-02.md
@@ -109,8 +109,8 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Market Ekes Out Gain As Tesla, Nvidia Bounce Off Key Support  
-特斯拉、英伟达从关键支撑位反弹，市场回吐涨幅](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-nvidia-rise-off-support/)
+[Futures: Nvidia CEO Sees 'Insane' Demand  
+期货：英伟达 CEO 看到“疯狂”的需求](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-economic-data-nvidia-ceo-insane-demand/)
 
 
 
