--- a/_columns/The_Big_Picture/zh-cn/2024-09-23.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-23.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Midcaps, Sector Indexes Lead Stock Market Advance; These AI Stocks Power Higher	中型股、行业指数引领股市上涨;这些 AI 股票走高
+  Midcaps, Sector Indexes Lead Stock Market Advance; These AI Stocks Power Higher
 date: 2024-09-23 20:55 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,178 +10,141 @@ author: DAVID SAITO-CHUNG
 
 
 
-The [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) may not be performing as fabulously as Los Angeles Dodgers slugger Shohei Ohtani. Yet most indexes performed well on Monday. Small caps struggled, but perhaps they deserved a break after recent gains.  
-[今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/)表现可能不如洛杉矶道奇队的重击手大谷翔平（Shohei Ohtani）。然而，大多数指数周一表现良好。小盘股苦苦挣扎，但也许它们在最近的上涨之后应该得到休息。
+The [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) may not be performing as fabulously as Los Angeles Dodgers slugger Shohei Ohtani. Yet most indexes performed well on Monday. Small caps struggled, but perhaps they deserved a break after recent gains.
 
 
 
 
-The star in the stock market on Monday? One could make a case for the "minor" indexes.  
-周一股市上的明星？人们可以为 “minor” 索引提供理由。
+The star in the stock market on Monday? One could make a case for the "minor" indexes.
 
 
-The S&P MidCap 400 rallied 0.5%. This follows terrific back-to-back weekly rallies of 3.2% and 2.3%. At 3,119, the midcap gauge is getting quite close to surpassing an all-time high of 3,143.02 set more than six weeks ago.  
-标准普尔中型股 400 指数上涨 0.5%。在此之前，每周连续上涨 3.2% 和 2.3%。中盘股指标为 3,119 点，非常接近超过六周多前创下的历史高点 3,143.02。
+The S&P MidCap 400 rallied 0.5%. This follows terrific back-to-back weekly rallies of 3.2% and 2.3%. At 3,119, the midcap gauge is getting quite close to surpassing an all-time high of 3,143.02 set more than six weeks ago.
 
 
-Stock Market Today 今日股市
------------------------
-
-
-Meanwhile, two sector averages related to the Dow Jones family of indexes did a little better. Amid a growing expectation that the AI industry is going to require a ton of electricity to continue growing, power utility stocks flexed some muscle on Monday. As a result, the Dow utility average rose 0.7%. And despite a wicked fall by **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)) following earnings last week, the Dow transportation average rallied 0.8%.  
-与此同时，与道琼斯指数系列相关的两个行业平均指数表现略好。在人们越来越预期人工智能行业将需要大量电力才能继续增长的情况下，电力公用事业股周一展示了一些实力。因此，道琼斯公用事业平均指数上涨 0.7%。尽管**联邦快递** （[FDX](https://research.investors.com/quote.aspx?symbol=FDX)） 在上周财报发布后大幅下跌，但道琼斯运输平均指数上涨 0.8%。
-
-
-The Dow transports, up 0.8%, halted a one-day sell-off at the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/).  
-道琼斯运输指数上涨 0.8%，在 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)处停止了一天的抛售。
-
-
-These three indexes all did better than the marquee benchmarks of the stock market.  
-这三个指数的表现都优于股市的主要基准。
-
-
-The Nasdaq composite, getting a partial boost from at least four of the [Magnificent Seven megacap growth firms](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/), edged 0.1% higher. It hit an intraday high of 18,021 but closed below the millennium mark. The S&P 500 added 0.3% on Monday after surging ahead 4% and 1.4% in the two prior weeks, respectively. And the Dow Jones Industrial Average closed nearly 0.2% higher.  
-纳斯达克综合指数从[七大大型成长股中](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)至少有四家获得部分提振，小幅上涨 0.1%。它触及盘中高点 18,021 点，但收盘价低于千年大关。标准普尔 500 指数周一上涨 0.3%，此前两周分别飙升 4% 和 1.4%。道琼斯工业平均指数收盘上涨近 0.2%。
-
-
-Volume cratered on both main exchanges vs. Friday, when both weekly and monthly options on stocks and indexes expired.  
-与周五相比，两个主要交易所的交易量都大幅下降，当时股票和指数的每周和每月期权都到期了。
-
-
-Not Quite Ohtani Numbers, Yet还不完全是大谷的数字
----------------------------------------
-
-
-![](https://www.investors.com/wp-content/uploads/2024/09/MP092324--218x300.jpg)The Dow Jones industrials, according to Dow Jones Data, on Monday notched not only a record closing price. The 30-stock blue chip index also posted its 30th record close in 2024 so far. Meanwhile, the S&P 500 recorded its 40th record close of 2024. At 5,718, it's jumped nearly 20% year to date.  
-根据道琼斯数据，道琼斯工业指数周一不仅创下了创纪录的收盘价。迄今为止，由 30 只股票组成的蓝筹股指数也创下了 2024 年创纪录的第 30 次收盘价。与此同时，标准普尔 500 指数创下 2024 年的第 40 个收盘纪录。今年迄今已上涨近 20% 至 5,718 辆。
-
-
-The records by those stock market averages may pale vs. what Ohtani accomplished during his six-for-six at-bat performance against the hapless Miami Marlins last Thursday. During that game, the Japanese superstar pitcher-cum-slugger made MLB history by hitting 50 home runs and stealing 50 bases in a single season.  
-这些股市平均数的记录可能与大谷在上周四对阵倒霉的迈阿密马林鱼队的 6 比 6 击球比赛中所取得的成就相比相形见绌。在那场比赛中，这位日本超级巨星投手兼重击手创造了 MLB 历史，在一个赛季中打出 50 个本垒打并偷走 50 个垒。
-
-
-Yet, market action continues to tell IBD readers that fund managers continue to accumulate stock.  
-然而，市场行为继续告诉 IBD 读者，基金经理继续囤积股票。
-
-
-The recent moves also follow what is typically a positive factor for the stock market.  
-最近的走势也遵循了通常对股市有利的因素。
-
-
-On Wednesday, the Federal Reserve cut interest rates for the first time in four years. Fed Chair Jerome Powell also made it clear during a news conference that the central bank is ready to take further action in monetary easing so that the economy does not slide.  
-周三，美联储四年来首次降息。美联储主席杰罗姆鲍威尔在新闻发布会上也明确表示，央行准备采取进一步的货币宽松行动，以免经济下滑。
-
-
-Bond Yields And The Stock Market债券收益率和股票市场
-------------------------------------------
-
-
-So, why did yields on the long-dated Treasuries rise in recent days?  
-那么，为什么长期美国国债的收益率在最近几天会上升呢？
-
-
-Keep in mind that yields on the benchmark U.S. 10-year bond had already been falling swiftly ahead of the [FOMC meeting last Tuesday and Wednesday](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/). At 3.74%, it still reflects a much lower cost of money than in April this year (the 10-year bond yielded 4.73% then) and in late October 2023 (4.99%).  
-请记住，在[上周二和周三的 FOMC 会议](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/)之前，基准美国 10 年期国债的收益率已经迅速下降。3.74%，仍反映出比今年 4 月（当时 10 年期债券收益率为 4.73%）和 2023 年 10 月下旬（4.99%）低得多的资金成本。
-
-
-Robert Maltbie, managing partner of the Argonaut fund and president of Singular Research, notes the fed funds rate — which got cut by 50 basis points to a 4.75%-5% target range on Wednesday by the Federal Reserve — has historically floated as many as 60 basis points above the so-called forward rate, or what short-term rates might be in 90 days. "This means the neutral rate is 4%," Maltbie told IBD, or where the fed funds rate could stand before the central bank reaches a neutral stance on the cost of money.  
-Argonaut 基金管理合伙人兼 Singular Research 总裁罗伯特·马尔特比 （Robert Maltbie） 指出，联邦基金利率——美联储周三下调 50 个基点至 4.75%-5% 的目标区间——历史上比所谓的远期利率高出多达 60 个基点，或者 90 天内的短期利率可能是多少。“这意味着中性利率为 4%，”Maltbie 告诉 IBD，或者在央行对货币成本达成中性立场之前，联邦基金利率可能处于什么水平。
-
-
-How does Maltbie come up with 4%? Calculate it by taking the 1-year Treasury bill yield, squared, and dividing by the current 3-month T-bill yield. Using Monday's data from Treasury.gov, the forward rate was around 3.25%. Add 60 basis points and to get a neutral rate of almost 4%.  
-Maltbie 是怎么得出 4% 的？计算方法是将 1 年期国库券收益率平方除以当前 3 个月期国库券收益率。根据 Treasury.gov 周一的数据，远期利率约为 3.25%。加上 60 个基点，得到接近 4% 的中性利率。
-
-
-Fed Funds In The Future未来的联邦基金
-------------------------------
-
-
-According to CME FedWatch, bond traders see a nearly 78% probability that the Fed will further reduce short-term interest rates by three quarters of a percentage point to a range of 4%-4.25% by the Dec. 18 meeting. The chance of a full 100-basis-point cut stands at nearly 28%. Before that year-ending decision in December, The Fed will also meet on Nov. 7, just two days after the U.S. elections.  
-根据 CME FedWatch 的数据，债券交易员认为美联储在 12 月 18 日会议前进一步将短期利率下调四分之三个百分点至 4%-4.25% 区间的可能性接近 78%。全面降息 100 个基点的可能性接近 28%。在 12 月做出年终决定之前，美联储还将于 11 月 7 日召开会议，即美国大选后仅两天。
-
-
-[Distribution days](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) on the Nasdaq total six within the past 25 trading days. Is that a concern for the stock market? Yes and no.  
-在过去 25 个交易日内，纳斯达克的[派息日](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/)总数为 6 天。这是股市的担忧吗？是的，也不是。
-
-
-Yes, because the number itself is high. You'd prefer to see the stock market indexes gain a distribution day or two infrequently. Profit-taking is a normal act of behavior on Wall Street. However, the "quality" of heavy selling, usually marked by distribution days, has been absent lately.  
-是的，因为这个数字本身就很高。您更愿意看到股票市场指数不频繁地获得一两个分发日的收益。获利回吐是华尔街的正常行为。然而，通常以分销天数为标志的重销售的“质量”最近已经不存在了。
-
-
-Last week, IBD spotted a small cluster of distribution days. Yet a [stalling session](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/) (in which the Nasdaq rose 0.2% but finished well of session highs) on Sept. 17, a 0.3% decline on Sept. 18, and a 0.4% drop on Friday that saw volume explode on quadruple witching, do not fit the mold of huge institutions flooding the stock market exits.  
-上周，IBD 发现了一小群分发日。然而，9 月 17 日[的停滞交易](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/)日（纳斯达克指数上涨 0.2%，但收盘时高点不错），9 月 18 日下跌 0.3%，周五下跌 0.4%，成交量在四倍波动中爆炸，并不符合大型机构涌入股市退出的模式。
-
-
-Watch The Count 观看 The Count
-----------------------------
-
-
-The following distribution days certainly showed more bite. Whether they exit due to a strong rally or due to time passed will be noted in this column:  
-接下来的分发日无疑显示出更多的咬合力。他们是由于强劲反弹还是由于时间的流逝而退出，我们将在本专栏中注明：
-
-
-* Aug. 22: Nasdaq falls 1.7%  
-8 月 22 日：纳斯达克指数下跌 1.7%
-* Aug. 28: Nasdaq down 1.1%  
-8 月 28 日：纳斯达克指数下跌 1.1%
-* Aug. 29: Nasdaq off 0.2%  
-8 月 29 日：纳斯达克指数下跌 0.2%
-
-
-AI-related plays continue to attract fresh investor capital.  
-AI 相关业务继续吸引新的投资者资本。
-
-
-Growing Again 再次成长
+Stock Market Today
 ------------------
 
 
-
-A few days after announcing a long-range nuclear power supply deal at Three Mile Island with AI technology and cloud computing innovator **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) added 0.8%. At one point Constellation Energy gained as much as 6.6%. Shares gapped out of a four-month base with a 236.30 [standard buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
-在宣布与人工智能技术和云计算创新者 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 在三里岛达成远程核电供应协议几天后，**Constellation Energy** （[CEG）](https://research.investors.com/quote.aspx?symbol=CEG) 上涨 0.8%。Constellation Energy 一度上涨了 6.6%。股价跳空突破四个月底部，标准[买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)为 236.30。
+Meanwhile, two sector averages related to the Dow Jones family of indexes did a little better. Amid a growing expectation that the AI industry is going to require a ton of electricity to continue growing, power utility stocks flexed some muscle on Monday. As a result, the Dow utility average rose 0.7%. And despite a wicked fall by **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)) following earnings last week, the Dow transportation average rallied 0.8%.
 
 
-Constellation is part of IBD's alternative energy industry group. Energy sector peer **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)), a member of the electric utility industry group, rose 3.5% in heavy volume to 111.63. The stock moved further past a [trendline entry point](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/) near 89.  
-Constellation 是 IBD 替代能源行业集团的一部分。能源行业同行**瑞致达** （[VST](https://research.investors.com/quote.aspx?symbol=VST)） 是电力公用事业行业集团的成员，大宗成交量上涨 3.5% 至 111.63。该股进一步突破 89 附近的[趋势线入场点](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/)。
+The Dow transports, up 0.8%, halted a one-day sell-off at the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/).
 
 
-Meanwhile, **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) edged 0.4% higher on news that it is mulling plans to expand its semiconductor manufacturing capacity by investing in the Middle East. Chip foundries need tons of water to operate. Perhaps that's one reason why **Aris Water** ([ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)), which provides water to domestic plants, spurted 3.3% higher in above-average turnover on Monday.  
-与此同时，**台积电** （[TSM）](https://research.investors.com/quote.aspx?symbol=TSM) 小幅上涨 0.4%，此前有消息称该公司正在考虑通过投资中东来扩大其半导体制造能力。芯片代工厂需要大量的水来运行。也许这就是为家庭工厂供水的 **Aris Water** （[ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)） 周一营业额高于平均水平飙升 3.3% 的原因之一。
+These three indexes all did better than the marquee benchmarks of the stock market.
 
 
-The small cap is trying to clear a new base at 17.91. Shares have more than doubled since bottoming at 7.22 in December.  
-小盘股正试图在 17.91 清除新的底部。自 12 月触底 7.22 以来，股价已翻了一番多。
+The Nasdaq composite, getting a partial boost from at least four of the [Magnificent Seven megacap growth firms](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/), edged 0.1% higher. It hit an intraday high of 18,021 but closed below the millennium mark. The S&P 500 added 0.3% on Monday after surging ahead 4% and 1.4% in the two prior weeks, respectively. And the Dow Jones Industrial Average closed nearly 0.2% higher.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092324.pdf)
+Volume cratered on both main exchanges vs. Friday, when both weekly and monthly options on stocks and indexes expired.
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+Not Quite Ohtani Numbers, Yet
+-----------------------------
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+![](https://www.investors.com/wp-content/uploads/2024/09/MP092324--218x300.jpg)The Dow Jones industrials, according to Dow Jones Data, on Monday notched not only a record closing price. The 30-stock blue chip index also posted its 30th record close in 2024 so far. Meanwhile, the S&P 500 recorded its 40th record close of 2024. At 5,718, it's jumped nearly 20% year to date.
 
 
-[Find Best Growth Stocks Via IBD's Most Stringent Screen  
-通过 IBD 最严格的筛选找到最佳成长型股票](https://research.investors.com/stock-lists/sector-leaders)
+The records by those stock market averages may pale vs. what Ohtani accomplished during his six-for-six at-bat performance against the hapless Miami Marlins last Thursday. During that game, the Japanese superstar pitcher-cum-slugger made MLB history by hitting 50 home runs and stealing 50 bases in a single season.
 
 
-[Want More Options Trading Strategies? Go Here  
-想要更多期权交易策略？转到此处](https://www.investors.com/category/research/options/)
+Yet, market action continues to tell IBD readers that fund managers continue to accumulate stock.
 
 
-[Why The 21-Day Exponential Moving Average Matters  
-为什么 21 天指数移动平均线很重要](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+The recent moves also follow what is typically a positive factor for the stock market.
 
 
-[The Latest In IBD Videos  
-最新的 IBD 视频](https://www.investors.com/ibd-videos)
+On Wednesday, the Federal Reserve cut interest rates for the first time in four years. Fed Chair Jerome Powell also made it clear during a news conference that the central bank is ready to take further action in monetary easing so that the economy does not slide.
 
 
-[Here's The Latest IBD Podcast  
-这是最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
+Bond Yields And The Stock Market
+--------------------------------
+
+
+So, why did yields on the long-dated Treasuries rise in recent days?
+
+
+Keep in mind that yields on the benchmark U.S. 10-year bond had already been falling swiftly ahead of the [FOMC meeting last Tuesday and Wednesday](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/). At 3.74%, it still reflects a much lower cost of money than in April this year (the 10-year bond yielded 4.73% then) and in late October 2023 (4.99%).
+
+
+Robert Maltbie, managing partner of the Argonaut fund and president of Singular Research, notes the fed funds rate — which got cut by 50 basis points to a 4.75%-5% target range on Wednesday by the Federal Reserve — has historically floated as many as 60 basis points above the so-called forward rate, or what short-term rates might be in 90 days. "This means the neutral rate is 4%," Maltbie told IBD, or where the fed funds rate could stand before the central bank reaches a neutral stance on the cost of money.
+
+
+How does Maltbie come up with 4%? Calculate it by taking the 1-year Treasury bill yield, squared, and dividing by the current 3-month T-bill yield. Using Monday's data from Treasury.gov, the forward rate was around 3.25%. Add 60 basis points and to get a neutral rate of almost 4%.
+
+
+Fed Funds In The Future
+-----------------------
+
+
+According to CME FedWatch, bond traders see a nearly 78% probability that the Fed will further reduce short-term interest rates by three quarters of a percentage point to a range of 4%-4.25% by the Dec. 18 meeting. The chance of a full 100-basis-point cut stands at nearly 28%. Before that year-ending decision in December, The Fed will also meet on Nov. 7, just two days after the U.S. elections.
+
+
+[Distribution days](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) on the Nasdaq total six within the past 25 trading days. Is that a concern for the stock market? Yes and no.
+
+
+Yes, because the number itself is high. You'd prefer to see the stock market indexes gain a distribution day or two infrequently. Profit-taking is a normal act of behavior on Wall Street. However, the "quality" of heavy selling, usually marked by distribution days, has been absent lately.
+
+
+Last week, IBD spotted a small cluster of distribution days. Yet a [stalling session](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/) (in which the Nasdaq rose 0.2% but finished well of session highs) on Sept. 17, a 0.3% decline on Sept. 18, and a 0.4% drop on Friday that saw volume explode on quadruple witching, do not fit the mold of huge institutions flooding the stock market exits.
+
+
+Watch The Count
+---------------
+
+
+The following distribution days certainly showed more bite. Whether they exit due to a strong rally or due to time passed will be noted in this column:
+
+
+* Aug. 22: Nasdaq falls 1.7%
+* Aug. 28: Nasdaq down 1.1%
+* Aug. 29: Nasdaq off 0.2%
+
+
+AI-related plays continue to attract fresh investor capital.
+
+
+Growing Again
+-------------
+
+
+
+A few days after announcing a long-range nuclear power supply deal at Three Mile Island with AI technology and cloud computing innovator **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) added 0.8%. At one point Constellation Energy gained as much as 6.6%. Shares gapped out of a four-month base with a 236.30 [standard buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).
+
+
+Constellation is part of IBD's alternative energy industry group. Energy sector peer **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)), a member of the electric utility industry group, rose 3.5% in heavy volume to 111.63. The stock moved further past a [trendline entry point](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/) near 89.
+
+
+Meanwhile, **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) edged 0.4% higher on news that it is mulling plans to expand its semiconductor manufacturing capacity by investing in the Middle East. Chip foundries need tons of water to operate. Perhaps that's one reason why **Aris Water** ([ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)), which provides water to domestic plants, spurted 3.3% higher in above-average turnover on Monday.
+
+
+The small cap is trying to clear a new base at 17.91. Shares have more than doubled since bottoming at 7.22 in December.
+
+
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092324.pdf)
+
+
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+
+
+**YOU MIGHT ALSO LIKE:**
+
+
+[Find Best Growth Stocks Via IBD's Most Stringent Screen](https://research.investors.com/stock-lists/sector-leaders)
+
+
+[Want More Options Trading Strategies? Go Here](https://www.investors.com/category/research/options/)
+
+
+[Why The 21-Day Exponential Moving Average Matters](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+
+
+[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+
+
+[Here's The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
 
 
 
