--- a/_columns/The_Big_Picture/zh-cn/2024-09-24.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-24.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq Leads Another Stock Market Advance; TSMC Scores Breakout As Nvidia Awakes From Slumber	纳斯达克领涨股市;台积电得分突破，英伟达从沉睡中醒来
+  Nasdaq Leads Another Stock Market Advance; TSMC Scores Breakout As Nvidia Awakes From Slumber
 date: 2024-09-24 17:25 -0700
 author: KEN SHREVE
 ---
@@ -10,38 +10,31 @@ author: KEN SHREVE
 
 
 
-Major stock indexes eked out modest gains in the stock market Tuesday as a weak reading on U.S. consumer confidence was offset by big gains for Chinese stocks.  
-主要股指周二在股市中小幅上涨，因为美国消费者信心的疲软数据被中国股市的大幅上涨所抵消。
+Major stock indexes eked out modest gains in the stock market Tuesday as a weak reading on U.S. consumer confidence was offset by big gains for Chinese stocks.
 
 
 
 
-Stocks opened slightly higher, shrugging off a big move for China indexes overnight. The Shanghai Composite and Hong Kong's Hang Seng Index both jumped 4.1% after China announced a series of [stimulus measures](https://www.investors.com/news/peoples-bank-china-stimulus-biggest-since-covid-alibaba-jd-nio-fcx-alb-cat/) to prop up an economy that's been slow to recover.  
-股市开盘小幅走高，隔夜中国股指大跌。上证综指和香港恒生指数均上涨 4.1%，此前中国宣布了一系列[刺激措施](https://www.investors.com/news/peoples-bank-china-stimulus-biggest-since-covid-alibaba-jd-nio-fcx-alb-cat/)，以支撑复苏缓慢的经济。
+Stocks opened slightly higher, shrugging off a big move for China indexes overnight. The Shanghai Composite and Hong Kong's Hang Seng Index both jumped 4.1% after China announced a series of [stimulus measures](https://www.investors.com/news/peoples-bank-china-stimulus-biggest-since-covid-alibaba-jd-nio-fcx-alb-cat/) to prop up an economy that's been slow to recover.
 
 
-The Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) soared 10%, helped by strong gains for top holdings **Alibaba** ([BABA](https://research.investors.com/quote.aspx?symbol=BABA)) and **Tencent** ([TCEHY](https://research.investors.com/quote.aspx?symbol=TCEHY)). Tencent gapped out of a 19-week flat base with a 50.89 entry. The 5% buy zone went up to 53.43.  
-Krane CSI 中国互联网 ETF （[KWEB）](https://research.investors.com/quote.aspx?symbol=KWEB) 飙升 10%，这得益于顶级持股**阿里巴巴** （[BABA）](https://research.investors.com/quote.aspx?symbol=BABA) 和**腾讯** （[TCEHY](https://research.investors.com/quote.aspx?symbol=TCEHY)） 的强劲上涨。腾讯跳空跳出 19 周的平坦基数，入场价为 50.89。5% 买入区域上涨至 53.43。
+The Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) soared 10%, helped by strong gains for top holdings **Alibaba** ([BABA](https://research.investors.com/quote.aspx?symbol=BABA)) and **Tencent** ([TCEHY](https://research.investors.com/quote.aspx?symbol=TCEHY)). Tencent gapped out of a 19-week flat base with a 50.89 entry. The 5% buy zone went up to 53.43.
 
 
-The news out of China fueled big moves for several copper producers in IBD's Mining-Metal Ores group. **Southern Copper** ([SCCO](https://research.investors.com/quote.aspx?symbol=SCCO)) and **Freeport-McMoRan** ([FCX](https://research.investors.com/quote.aspx?symbol=FCX)) gapped up and closed with gains of 7% and 8%, respectively. But both stocks are still more than 10% off their highs.  
-来自中国的消息推动了 IBD 采矿金属矿石集团的几家铜生产商的重大行动。**Southern Copper** （[SCCO）](https://research.investors.com/quote.aspx?symbol=SCCO) 和 **Freeport-McMoRan** （[FCX](https://research.investors.com/quote.aspx?symbol=FCX)） 跳空上涨和收盘，分别上涨 7% 和 8%。但这两只股票仍比高点低 10% 以上。
+The news out of China fueled big moves for several copper producers in IBD's Mining-Metal Ores group. **Southern Copper** ([SCCO](https://research.investors.com/quote.aspx?symbol=SCCO)) and **Freeport-McMoRan** ([FCX](https://research.investors.com/quote.aspx?symbol=FCX)) gapped up and closed with gains of 7% and 8%, respectively. But both stocks are still more than 10% off their highs.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The Nasdaq climbed more than 0.5% and retook the 18,000 level. But it stopped short of taking out last week's high near 18,100. Volume rose slightly from Monday and breadth was just OK, with winners beating losers by about 4-to-3.  
-纳斯达克指数上涨超过 0.5%，收复 18,000 点。但它未能突破上周触及 18,100 点附近的高点。成交量比周一略有上升，广度还可以，赢家以大约 4 比 3 的比分击败输家。
+The Nasdaq climbed more than 0.5% and retook the 18,000 level. But it stopped short of taking out last week's high near 18,100. Volume rose slightly from Monday and breadth was just OK, with winners beating losers by about 4-to-3.
 
 
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) jumped 4% and gave an early buy signal to aggressive traders. But with the stock still below its late-August high, Nvidia still has [overhead supply](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply) to work through after several higher-volume declines since late July.  
-**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 上涨 4%，并向激进的交易者发出了早期买入信号。但由于该股仍低于 8 月下旬的高点，英伟达在 7 月下旬以来的几次高销量下跌后，仍有[间接供应](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply)需要解决。
+**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) jumped 4% and gave an early buy signal to aggressive traders. But with the stock still below its late-August high, Nvidia still has [overhead supply](https://www.investors.com/ibd-videos/videos/david-ryan-how-to-spot-and-understand-overhead-supply) to work through after several higher-volume declines since late July.
 
 
-**Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), also known as TSMC, jumped 4% and reclaimed a 175.45 handle entry.  
-**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)），也称为台积电，上涨 4%，收复 175.45 关口。
+**Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)), also known as TSMC, jumped 4% and reclaimed a 175.45 handle entry.
 
 
 
@@ -49,8 +42,7 @@ The Nasdaq climbed more than 0.5% and retook the 18,000 level. But it stopped sh
 ---
 
 
-**[Stay In Sync With The Market With IBD's ETF Market Strategy  
-通过 IBD 的 ETF 市场策略与市场保持同步](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Stay In Sync With The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
@@ -58,83 +50,65 @@ The Nasdaq climbed more than 0.5% and retook the 18,000 level. But it stopped sh
 ---
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP092424--227x300.jpg)Besides Nvidia, other top gainers in the Nasdaq 100 included **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)), up more than 2%. Netflix topped a 697.49 entry last month but never got going. But five weeks of sideways price action brought an alternate buy point at 711.43 into play. Netflix is still in the buy zone from both entries.  
-除了英伟达，纳斯达克 100 指数中其他涨幅最大的股票包括 **Netflix** （[NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)），上涨超过 2%。Netflix 上个月以 697.49 的成绩名列前茅，但从未继续前进。但五周的横盘整理价格走势带来了 711.43 的替代买入点。Netflix 仍处于这两个条目的买入区域。
+![](https://www.investors.com/wp-content/uploads/2024/09/MP092424--227x300.jpg)Besides Nvidia, other top gainers in the Nasdaq 100 included **Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)), up more than 2%. Netflix topped a 697.49 entry last month but never got going. But five weeks of sideways price action brought an alternate buy point at 711.43 into play. Netflix is still in the buy zone from both entries.
 
 
-The S&P 500 reversed slightly higher for a gain of nearly 0.3%, good for an all-time closing high. Volume also rose on the NYSE as advancing stocks beat decliners by about 8-to-5.  
-标准普尔 500 指数小幅走高，上涨近 0.3%，创下历史收盘高点。纽约证券交易所的成交量也有所上升，因为上涨的股票以约 8 比 5 的比分击败下跌的股票。
+The S&P 500 reversed slightly higher for a gain of nearly 0.3%, good for an all-time closing high. Volume also rose on the NYSE as advancing stocks beat decliners by about 8-to-5.
 
 
-NYSE-listed **Smartsheet** ([SMAR](https://research.investors.com/quote.aspx?symbol=SMAR)) surged 6.5% on news [it's being taken private](https://www.investors.com/news/technology/smartsheet-stock-blackstone-vista-equity-acquire-software-maker/) by private equity firms Vista Equity Partners and **Blackstone** ([BX](https://research.investors.com/quote.aspx?symbol=BX)) in an $8.4 billion transaction.  
-在纽约证券交易所上市的 **Smartsheet** （[SMAR）](https://research.investors.com/quote.aspx?symbol=SMAR) 飙升 6.5%，此前有消息称[该公司以](https://www.investors.com/news/technology/smartsheet-stock-blackstone-vista-equity-acquire-software-maker/) 84 亿美元的交易被私募股权公司 Vista Equity Partners 和 **Blackstone** （[BX](https://research.investors.com/quote.aspx?symbol=BX)） 私有化。
+NYSE-listed **Smartsheet** ([SMAR](https://research.investors.com/quote.aspx?symbol=SMAR)) surged 6.5% on news [it's being taken private](https://www.investors.com/news/technology/smartsheet-stock-blackstone-vista-equity-acquire-software-maker/) by private equity firms Vista Equity Partners and **Blackstone** ([BX](https://research.investors.com/quote.aspx?symbol=BX)) in an $8.4 billion transaction.
 
 
-The Dow Jones Industrial Average added 0.2% and hit another all-time high despite a 5.5% downdraft for **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)). Shares slumped after the Justice Department [filed an antitrust suit](https://www.investors.com/news/visa-stock-antitrust-doj-debit-card-credit-card-chargeoffs/) against the company, accusing it of monopolizing the debit-card market.  
-道琼斯工业平均指数上涨 0.2%，尽管 **Visa** （[V](https://research.investors.com/quote.aspx?symbol=V)） 下跌 5.5%，但仍创下历史新高。在司法部[对该公司提起反垄断诉讼](https://www.investors.com/news/visa-stock-antitrust-doj-debit-card-credit-card-chargeoffs/)，指控其垄断借记卡市场后，该公司股价暴跌。
+The Dow Jones Industrial Average added 0.2% and hit another all-time high despite a 5.5% downdraft for **Visa** ([V](https://research.investors.com/quote.aspx?symbol=V)). Shares slumped after the Justice Department [filed an antitrust suit](https://www.investors.com/news/visa-stock-antitrust-doj-debit-card-credit-card-chargeoffs/) against the company, accusing it of monopolizing the debit-card market.
 
 
-The Russell 2000 also gained 0.2% as the small-cap index sets up for a possible upside breakout. A move above last week's high of 2,259.25 would do it.  
-罗素 2000 指数也上涨了 0.2%，因为小盘股指数为可能的上行突破奠定了基础。突破上周高点 2,259.25 即可。
+The Russell 2000 also gained 0.2% as the small-cap index sets up for a possible upside breakout. A move above last week's high of 2,259.25 would do it.
 
 
-Weak Consumer Confidence 消费者信心疲软
---------------------------------
+Weak Consumer Confidence
+------------------------
 
 
-The selling picked up the pace in the stock market just after 10 a.m. ET, when the latest reading on consumer confidence came in much weaker than expected. While August's Consumer Confidence Index reading was revised slightly higher to 105.6, September's reading of 98.7 was well below the 103 consensus estimate. But buyers started pushing indexes higher again around 10:45 a.m. ET.  
-美国东部时间上午 10 点刚过，股市的抛售步伐加快，当时消费者信心的最新数据远弱于预期。虽然 8 月消费者信心指数略微上调至 105.6，但 9 月的 98.7 远低于市场普遍估计的 103。但买家在美国东部时间上午 10：45 左右开始再次推高指数。
+The selling picked up the pace in the stock market just after 10 a.m. ET, when the latest reading on consumer confidence came in much weaker than expected. While August's Consumer Confidence Index reading was revised slightly higher to 105.6, September's reading of 98.7 was well below the 103 consensus estimate. But buyers started pushing indexes higher again around 10:45 a.m. ET.
 
 
-The next notable piece of economic data comes Friday with the release of the Personal Income & Spending report for August. Inside the report, the core personal consumption expenditures index, on a year-over-year basis, is expected to rise slightly to 2.7% from 2.6% in July. But after a big rate cut by the Federal Reserve last week, committee members are more focused on the underlying health of the economy rather than a sudden pickup in inflation.  
-下一个值得注意的经济数据将于周五发布八月份的个人收入和支出报告。在报告中，核心个人消费支出指数同比预计将从 7 月份的 2.6% 小幅上升至 2.7%。但在美联储上周大幅降息后，委员会成员更关注经济的基本健康状况，而不是通胀的突然回升。
+The next notable piece of economic data comes Friday with the release of the Personal Income & Spending report for August. Inside the report, the core personal consumption expenditures index, on a year-over-year basis, is expected to rise slightly to 2.7% from 2.6% in July. But after a big rate cut by the Federal Reserve last week, committee members are more focused on the underlying health of the economy rather than a sudden pickup in inflation.
 
 
-With the stock market still acting well and major stock indexes at or near all-time highs, it makes sense to have aggressive exposure to stocks.  
-由于股市仍然表现良好，主要股指处于或接近历史高位，因此积极投资股票是有意义的。
+With the stock market still acting well and major stock indexes at or near all-time highs, it makes sense to have aggressive exposure to stocks.
 
 
-Plenty of top-rated growth stocks — including [Leaderboard](https://leaderboard.investors.com) names **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)), **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)) and **Ensign Group** ([ENSG](https://research.investors.com/quote.aspx?symbol=ENSG)) — are well extended past proper entry points.  
-许多排名靠前的成长型股票——包括[排行榜](https://leaderboard.investors.com)名称 **SharkNinja** （[SN](https://research.investors.com/quote.aspx?symbol=SN)）、**DoorDash** （[DASH）、](https://research.investors.com/quote.aspx?symbol=DASH)**ServiceNow** （[NOW](https://research.investors.com/quote.aspx?symbol=NOW)） 和 **Ensign Group** （[ENSG](https://research.investors.com/quote.aspx?symbol=ENSG)）——都远远超出了适当的切入点。
+Plenty of top-rated growth stocks — including [Leaderboard](https://leaderboard.investors.com) names **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)), **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)) and **Ensign Group** ([ENSG](https://research.investors.com/quote.aspx?symbol=ENSG)) — are well extended past proper entry points.
 
 
-But the stock market did serve up a few technical breakouts early in the session. In the restaurant group, **Wingstop** ([WING](https://research.investors.com/quote.aspx?symbol=WING)) continued its low-volume rally but a 1.4% intraday gain faded to a loss of 0.2% by the close.  
-但股市确实在盘初出现了一些技术突破。在餐饮板块，**Wingstop** （[WING](https://research.investors.com/quote.aspx?symbol=WING)） 继续低成交量反弹，但盘中 1.4% 的涨幅回落至收盘时 0.2% 的跌幅。
+But the stock market did serve up a few technical breakouts early in the session. In the restaurant group, **Wingstop** ([WING](https://research.investors.com/quote.aspx?symbol=WING)) continued its low-volume rally but a 1.4% intraday gain faded to a loss of 0.2% by the close.
 
 
-Group peer **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)) also tried to break out but it also erased early gains. Note that the stock tried to break out with a lagging [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/).  
-集团同行 **Texas Roadhouse** （[TXRH）](https://research.investors.com/quote.aspx?symbol=TXRH) 也试图突破，但也抹去了早期的涨幅。请注意，该股试图以滞后的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)突破。
+Group peer **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx?symbol=TXRH)) also tried to break out but it also erased early gains. Note that the stock tried to break out with a lagging [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/).
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092424.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092424.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092424.pdf).
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Techs, China Stocks Fall After Nvidia Leads Five New Buys  
-科技股、中国股市在 Nvidia 领投 5 只新买入后下跌](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-china-stocks-fall-nvidia-tesla-rival-in-buy-areas/)
+[Techs, China Stocks Fall After Nvidia Leads Five New Buys](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-china-stocks-fall-nvidia-tesla-rival-in-buy-areas/)
 
 
 
